adds web data scraping notebook

--- a/nb/data-preparation.ipynb
+++ b/nb/data-preparation.ipynb
@@ -39,13 +39,29 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/IPython/core/interactiveshell.py:2785: DtypeWarning: Columns (17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "a = \"id,region_id,area_id,city_id,street_id,shortname_region,formalname_region,shortname_area,formalname_area,shortname_city,formalname_city,shortname_street,formalname_street,house_number,building,block,letter,address,houseguid,built_year,exploitation_start_year,project_type,house_type,floor_count_max,floor_count_min,area_land\"\n",
     "dfcols = a.split(sep=',')\n",
     "del(a)\n",
     "df = pd.read_csv('../data/rosreestr/export-reestrmkd-77-1.csv', usecols=dfcols)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
