refines data gathering

--- a/nb/data-gathering.ipynb
+++ b/nb/data-gathering.ipynb
@@ -16,7 +16,8 @@
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import time"
+    "import time\n",
+    "from IPython.display import clear_output"
    ]
   },
   {
@@ -66,15 +67,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pages = []\n",
+    "session.get(\"https://www.reformagkh.ru/myhouse/profile/view/\"+str(df.id[0]), headers = headers, timeout=100).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = []\n",
     "t0 = time.time()\n",
-    "for row in df.head(10).id.iteritems():\n",
-    "    i = row[1]\n",
-    "    print(i)\n",
-    "    page = session.get(\"https://www.reformagkh.ru/myhouse/profile/view/\"+str(i), headers = headers, timeout=100)\n",
-    "    pages.append([row[1], grep_c(page.text)[0], grep_c(page.text)[1]])\n",
+    "i = 1\n",
+    "count = len(df)\n",
+    "for row in df.head(100).id.iteritems():\n",
+    "    clear_output(wait=True)\n",
+    "    print(i, 'of ', count)\n",
+    "    page = session.get(\"https://www.reformagkh.ru/myhouse/profile/view/\"+str(row[1]), headers = headers, timeout=100)\n",
+    "    table.append([row[1], grep_c(page.text)[0], grep_c(page.text)[1]])\n",
+    "    i = i+1\n",
     "t1 = time.time()\n",
     "print(t1-t0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table"
    ]
   },
   {
@@ -119,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
